Allows prerendering to continue for offline requests even if the url was recently visited. This is important for the way the new Download feature works. If a link is taking a while to load, you can choose to download it (which does background load using prerender with ORIGIN_OFFLINE). We indeed were recently trying to visit it but still want to load in the background.

BUG=652350

Review-Url: https://codereview.chromium.org/2397783003
Cr-Commit-Position: refs/heads/master@{#423543}

Former-commit-id: cafb83e8a6a24bc3df0387959373b1988baf5416